--- a/advanced-programming.tex
+++ b/advanced-programming.tex
@@ -735,7 +735,7 @@ These conditions are automatically satisfied by linear programs.
 	therefore $\overline x \in \mathcal A$.
 
 	Now we are ready to prove the actual theorem.
-	We assume $\mathrm{rank}(A) = p$ (otherwise we remove the redundant constraints).
+	We assume $\rank(A) = p$ (otherwise we remove the redundant constraints).
 	If $p^* = -\infty$ by weak duality also $d^* = -\infty$, hence we just need to consider the cases
 	where $p^*$ is finite.
 	Let us define another set
@@ -929,12 +929,12 @@ There are some notable types of polyhedra:
 	\emph{proper faces}.
 \end{definition}
 
-\begin{theorem}{Minkowski-Weyl for polytopes}{minkowski-weyl}
+\begin{theorem}{Minkowski-Weyl for polytopes}{minkowski-weyl-polytopes}
 	$P \subseteq \R$ is a polytope if and only if $\exists V \subseteq \R^n$ finite such that
 	$P = \mathrm{conv}(V)$ (convex hull of $V$).
 \end{theorem}
 
-\begin{theorem}{Minkowski-Weyl for polyhedra}{minkowski-weyl}
+\begin{theorem}{Minkowski-Weyl for polyhedra}{minkowski-weyl-polyhedra}
 	$P \subseteq \R$ is a polytope if and only if $\exists V, Y \subseteq \R^n$ finite such that
 	$P = \mathrm{conv}(V) + \mathrm{cone}(Y)$ (convex hull of $V$ plus
 	the convex cone of $Y$ (as in \cref{def:convex-cone}),
@@ -1018,14 +1018,14 @@ then there exists $z \in P$ such that $A''z < b$ (see lecture notes for proof, l
 \begin{lemma}{Dimension of proper faces}{dim-faces}
 	If there exists $z \in P \neq \varnothing$ such that $A'' z<b''$, then
 	\begin{itemize}
-		\item $\mathrm{dim}(P) = n - \mathrm{rank}(A')$;
+		\item $\mathrm{dim}(P) = n - \rank(A')$;
 		\item $z$ does not belong to any proper face of $P$.
 	\end{itemize}
 \end{lemma}
 
 \begin{proof}
 	Let $A = \{ x \mid A'x = b\}$, since $P \subseteq A$ we have
-	$\dim(P) \leq \dim(A) = n - \mathrm{rank}(A)$.
+	$\dim(P) \leq \dim(A) = n - \rank(A)$.
 	Then, since the inequality is strict, we can find $\varepsilon > 0$ such that the ball
 	$B = \{ x \in A \mid \norm{x - z} \leq \varepsilon \} \subseteq P$ which in turns implies
 	$\dim(P) \geq \dim(B) = \dim(A)$.
@@ -1047,22 +1047,22 @@ then there exists $z \in P$ such that $A''z < b$ (see lecture notes for proof, l
 		F = \{ x \in \R^n \mid A'x = b', \tilde A x = \tilde b, A'' x \leq b'' \}
 	\end{equation}
 	where $\tilde A x \leq \tilde b$ is a subsystem of $A '' x \leq b ''$.
-	Then $\dim(F) \leq n - \mathrm{rank}\begin{pmatrix} A' \\ \tilde A \end{pmatrix}$.
+	Then $\dim(F) \leq n - \rank\begin{pmatrix} A' \\ \tilde A \end{pmatrix}$.
 
-	If $\mathrm{rank}\begin{pmatrix} A' \\ \tilde A \end{pmatrix} = \mathrm{rank}(A')$ then
+	If $\rank\begin{pmatrix} A' \\ \tilde A \end{pmatrix} = \mathrm{rank}(A')$ then
 	either each inequality of $\tilde A x = \tilde b$ is a linear combination of $A' x = b'$
 	and $F = P$, otherwise we have
 	\begin{equation}
-		\mathrm{rank} \begin{pmatrix} A' & b' \\ \tilde A & \tilde b \end{pmatrix} >
-		\mathrm{rank} \begin{pmatrix} A' \\ \tilde A \end{pmatrix} = \mathrm{rank}(A')
+		\rank \begin{pmatrix} A' & b' \\ \tilde A & \tilde b \end{pmatrix} >
+		\rank \begin{pmatrix} A' \\ \tilde A \end{pmatrix} = \mathrm{rank}(A')
 	\end{equation}
 	which implies $F = \varnothing$.
 
 	Otherwise we have that
-	$\mathrm{rank} \begin{pmatrix} A' \\ \tilde A \end{pmatrix} \geq \mathrm{rank}(A') + 1$
+	$\rank \begin{pmatrix} A' \\ \tilde A \end{pmatrix} \geq \mathrm{rank}(A') + 1$
 	and
 	\begin{equation}
-		\dim(F) \leq n - \mathrm{rank}(A') - 1 = \dim(P) -1 \qedhere
+		\dim(F) \leq n - \rank(A') - 1 = \dim(P) -1 \qedhere
 	\end{equation}
 \end{proof}
 
@@ -1095,7 +1095,7 @@ then there exists $z \in P$ such that $A''z < b$ (see lecture notes for proof, l
 
 	Then, by \cref{lemma:dim-faces}, we get
 	\begin{equation}
-		\dim(F) = n - \mathrm{rank}\begin{pmatrix} A'\\a^T \end{pmatrix} = n- \mathrm{rank}(A') + 1
+		\dim(F) = n - \rank\begin{pmatrix} A'\\a^T \end{pmatrix} = n- \mathrm{rank}(A') + 1
 	\end{equation}
 	since $a^Tx \leq b$ is not redundant.
 	Then $\dim(F) = \dim(P) -1$ which means $F$ is a facet.
@@ -1138,7 +1138,7 @@ then there exists $z \in P$ such that $A''z < b$ (see lecture notes for proof, l
 \end{proof}
 
 \begin{theorem}{Dimension of minimal faces}{dim-minimal-faces}
-	All minimal faces of $P$ have dimension $n - \mathrm{rank}\begin{pmatrix} A' \\ A'' \end{pmatrix}$.
+	All minimal faces of $P$ have dimension $n - \rank\begin{pmatrix} A' \\ A'' \end{pmatrix}$.
 \end{theorem}
 
 \begin{proof}
@@ -1146,12 +1146,12 @@ then there exists $z \in P$ such that $A''z < b$ (see lecture notes for proof, l
 	of $A'' x \leq b''$.
 	Then
 	\begin{equation}
-		\dim(F) = n- \mathrm{rank}\begin{pmatrix} A' \\ \tilde A \end{pmatrix}
-		\geq n - \mathrm{rank}\begin{pmatrix} A' \\ A''\end{pmatrix}
+		\dim(F) = n- \rank\begin{pmatrix} A' \\ \tilde A \end{pmatrix}
+		\geq n - \rank\begin{pmatrix} A' \\ A''\end{pmatrix}
 	\end{equation}
 	We claim that they are equal.
-	By contradiction say $\mathrm{rank} \begin{pmatrix} A' \\ \tilde A \end{pmatrix} \leq
-		\mathrm{rank} \begin{pmatrix} A' \\ A'' \end{pmatrix}$.
+	By contradiction say $\rank \begin{pmatrix} A' \\ \tilde A \end{pmatrix} \leq
+		\rank \begin{pmatrix} A' \\ A'' \end{pmatrix}$.
 	Then there is a row $A_k''$ linearly independent from the rows of $\tilde A$ and $A'$, but this
 	would give that
 	\begin{equation}
@@ -1160,5 +1160,135 @@ then there exists $z \in P$ such that $A''z < b$ (see lecture notes for proof, l
 	\end{equation}
 	which is a contradiction.
 \end{proof}
+
+\subsubsection{Face lattice}
+
+The face lattice of a polytope is diagram, as in \cref{fig:face-lattice}, which shows the result of
+intercepting one face with another.
+
+\begin{figure}[!ht]
+	\centering
+	\includesvg[width=0.6\textwidth]{./assets/advanced-programming/face-lattice.svg}
+	\caption{Face lattice of a pyramid}
+	\label{fig:face-lattice}
+\end{figure}
+
+We make the following observations about this construct:
+\begin{enumerate}[label=\roman*.]
+	\item
+	      $\forall F, G$ there exists a face $M = F \cap G$ (which could also
+	      be $\varnothing$).
+	      The easiest way to show this is by tightening more inequalities in the equational definition face.
+
+	\item
+	      $\forall F, G$, $\exists J$ such that $J$ contains both $F, G$ and $J$
+	      is contained in every face containing $F, G$.
+	      Indeed $P$ always contains $F, G$, while if we consider all faces containing $F, G$ and take their
+	      intersection we also obtain a face which is contained in all faces containing $F, G$.
+
+	\item
+	      Each minimal face is an affine space and all minimal faces have the same dimension.
+
+	\item
+	      Every chain of faces $\varnothing \subset F_1 \subset \dots \subset P$
+	      in the face lattice contains exactly one face of each dimension $d = t, \dots, \dim(P)$ where
+	      $t$ is the dimension of the minimal faces.
+
+	\item Every face is the intersection of all facets containing it.
+
+	\item In a polytope each face is a convex hull of its vertices.
+\end{enumerate}
+
+\begin{theorem}{}{}
+	Let $P$ be a polytope and $V$ its vertices.
+	Let $V_\text{ext} = \{ x \in P \mid x \notin \mathrm{conv}(P\setminus{x})\}$
+	Then $V_\text{ext} = V$ and $P = \mathrm{conv}(V)$.
+\end{theorem}
+
+\begin{proof}
+	Let $V_0$ be the smallest subset of $V$ such that $P = \mathrm{conv}(V_0)$,
+	by \cref{thm:minkowski-weyl-polytopes} such set exists.
+	We want to show that $V \subseteq V_\text{ext} \subseteq V_0 \subseteq V$.
+
+	Let $z \in V$, then $c^T z = t$ for some $c, t$ such that $c^T x < t$
+	for all $x \in P \setminus \{z\}$ by the definition of vertex.
+	Whenever $y \in \mathrm{conv}(P\setminus \{z\})$, then $c^T y < t$, therefore
+	$z \notin \mathrm{conv}(P\setminus \{z\})$ and $z \in V_\text{ext}$,
+	which implies $V \subseteq V_\text{ext}$.
+
+	Now let $z \in P$ and $z \notin V_0$.
+	Then $z \in \mathrm{conv}(V_0) \subseteq \mathrm{conv}(P \setminus \{z\})$
+	therefore $V_\text{ext}$ and by contrappositive $V_\text{ext} \subseteq V_0$.
+
+	To conclude the proof we need to show that $V_0 \subseteq V$. To do so we let $z \in V_0$
+	and $D = \mathrm{conv}(V_0 \setminus \{z\})$. By minimality of $V_0$, $V_0$ and $D$ are disjoint,
+	moreover they are closed, hence by \cref{thm:strong-conv-sep}, we can find an hyperplane defined
+	by $c \in \R^n$ and $r \in \R$ such that $c^T z > r$ and $c^T x < r$ for all $x \in D$.
+	Let $t = c^T z$, then $c^T x < r < t$ for all $x \in V_0$:
+	we have that $\forall x \in \mathrm{conv}(V_0) \setminus \{z\} =
+		P \setminus \{z\} \text{ s.t. } c^T x < t$,	which means that $h = \{ x \mid c^T x = t \}$
+	is a supporting hyperplane of $P$ and $h \cap P = \{z\}$, therefore $z \in V$.
+\end{proof}
+
+\subsection{Preliminaries}
+
+First define some notation: given $A \in \R^{m \cross n}$ and $B \subseteq \{1, \dots, n\}$ denote
+$A_B$ the matrices consisting of columns of $A$ whose indices are in $B$.
+Similarly, for a vector $x \in \R^n$ we define $x_B \in \R^\abs{B}$ as the vector consisting
+of the values in $x$ whose indices are in $B$.
+
+\begin{definition}{Basic feasible solution}{basic-feasible-sol}
+	Given an LP $\max \{ c^T x \mid Ax = b, x\geq 0\}$, a feasible solution is a vector $x \in \R^n$
+	for which there is an $m$-element $B \subseteq \{1, \dots, n\}$ such that $A_B$ is non-singular
+	and $x_j = 0$ for all $j \notin B$.
+\end{definition}
+
+\begin{definition}{Feasible basis}{feasible-basis}
+	We say that $B \subseteq \{1, \dots, n\}$ is a feasible basis if there exists a feasible solution
+	corresponding to $B$.
+\end{definition}
+
+We observe the following:
+\begin{enumerate}[label=\roman*.]
+	\item Let $\tilde A$ containing the rows of $- \mathds 1_n$ whose indices are not in $B$.
+	      Then
+	      \begin{equation}
+		      A_B \text{ is non-singular } \iff \rank\begin{pmatrix}A \\ \tilde A \end{pmatrix} = n
+	      \end{equation}
+
+	\item For every $B \subseteq \{1, \dots, n\}$ with $\abs{B} = m$ with $A_B$ non-singular,
+	      there is at most one feasible solution $x \in \R^n$ such that $x_j = 0$ for all $j \notin B$
+	      and this solution is a vertex.
+
+	      To prove this let $\tilde A$ containing the rows of $- \mathds 1_n$ whose indices are not in $B$.
+	      Then $\{x \mid Ax = b, \tilde A x = 0 \} = \{x\}$ since
+	      $\begin{pmatrix}A \\ \tilde A \end{pmatrix} = n$.
+	      This means that, if $x$ is feasible, $\{x\}$ is a minimal face.
+\end{enumerate}
+
+\begin{lemma}{}{}
+	Let $P = \{ x \mid Ax = b_1, x \geq 0 \}$.
+	Every vertex of $P$ is a basic feasible solution to some corresponding basis $B$ of size $m$.
+\end{lemma}
+
+\begin{proof}
+	Let $v$ be a vertex of $P$.
+	Consider
+	\begin{equation}
+		\{v\} = \{ x \mid A x = b, \tilde A x = 0\} \quad \text{where }
+		\rank\begin{pmatrix}A \\ \tilde A \end{pmatrix} \text{ and } \tilde A = (-\mathds 1_n)_J \text{ for some indices } J
+	\end{equation}
+	Since $\rank(A) = m$ we have $\abs{J} \geq n - m$.
+	Consider $B' = {1, \dots, n} \setminus J$, then the columns of $A_{B'}$ must
+	be linearly independent otherwise $\rank \begin{pmatrix}A \\ \tilde A \end{pmatrix} < n$,
+	which in turns means that $\abs{B'} \leq m$.
+
+	Now choose $B \supset B'$ of indices of $m$ linearly independent columns of $A$
+	and we have that $v_i = 0$ for all $i \in B$.
+\end{proof}
+
+Introduce the notation $\Delta(n, m)$: this is the maximum distance between two vertices of an
+$n$-dimensional polyhedron with $m$ facets.
+
 
 \end{document}
